# etl_10k

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/interim/cleaned_filings/0000320193/10-K/0000320193-17-000070/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-18-000145/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-19-000119/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-20-000096/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-21-000105/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-22-000108/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-23-000106/: full-submission.txt
data/interim/cleaned_filings/0000320193/10-K/0000320193-24-000123/: full-submission.txt
scripts/: 01_pull_crsp_returns.py  02_download_filings.py  03_clean_filings.py  04_extract_item1a.py  05_compute_text_features.py  99_reproduce_all.py
src/etl_10k/: config.py
src/etl_10k/datasets/: build_panel.py
src/etl_10k/edgar/: cik_index.py  clean_downloader.py  downloader.py  extract_financial_statements.py  rate_limiter.py
src/etl_10k/models/: rf_setup.py
src/etl_10k/pipeline/: steps.py
src/etl_10k/text/: clean.py  complexity.py  lm_dict.py  segment.py  segment_fallback.py  tokenizer.py
src/etl_10k/wrds/: crsp_returns.py
tools/: clean_features.py  find_missing_ciks.py  segment_single_filing.py  tables.py
utils/: extract_financial_statements.py  telegram_logger.py
(+12 files in other folders)
