[project]
name = "etl-10k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "nltk>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "requests>=2.32.5",
    "sec-edgar-downloader>=5.1.0",
    "sqlalchemy==2.0.46",
    "wrds>=3.5.0",
]


[tool.uv]
package = true
